--- a/sub3suite/res/themes/dark.css
+++ b/sub3suite/res/themes/dark.css
@@ -506,6 +506,16 @@ QTabWidget::pane {
     border-bottom-width: 0px;
 }
 
+QTabWidget::pane[upside="true"] {
+    border-color: rgb(30,30,30);
+    background-color:transparent;
+    border-style: solid;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 1px;
+}
+
 QTabBar::tab {
     padding-left: 12px;
     padding-right: 12px;
@@ -518,6 +528,22 @@ QTabBar::tab {
     border-color: rgb(30,30,30);
     border-bottom-width: 0px;
     margin-left: 2px;
+    margin-right: 1px;
+}
+
+QTabBar::tab[upside="true"] {
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 3.5px;
+    padding-bottom: 3.5px;
+    color: rgb(250,250,250);
+    background-color: qlineargradient(spread:pad, x1:z0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(35, 35, 35, 255), stop:1 rgba(50, 50, 50, 255));
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(30,30,30);
+    border-bottom-width: 0px;
+    border-top-width: 0px;
+    margin-left: 0px;
     margin-right: 1px;
 }
 
