--- a/sub3suite/res/themes/dark.css
+++ b/sub3suite/res/themes/dark.css
@@ -39,8 +39,19 @@ QScrollArea {
     border-color: rgb(25,25,25);
 }
 
+QScrollArea[without_border="true"] {
+    border-style: solid;
+    border-width: 0px;
+}
+
 QScrollArea QWidget {
     background-color: rgb(40,40,40);
+}
+
+QWidget[s3s_light="true"],
+QScrollArea QWidget[s3s_light="true"],
+QScrollArea[s3s_light="true"] QWidget {
+    background-color: rgb(45,45,45);
 }
 
 QAbstractScrollArea {
@@ -251,13 +262,10 @@ QToolButton:pressed {
 }
 
 QFrame[frameShape="4"] {
+    min-height: 1px;
+    max-height: 1px;
     border: none;
     background: rgb(30,30,30);
-}
-
-QFrame[frameShape="5"] {
-    border: none;
-    background: transparent;
 }
 
 QFrame[default_frame="true"] {
